# panpilot

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
deploy/: panpilot-nginx.conf  panpilot.service
docs/: ARCHITECTURE.md  howto-server-setup.md  reference-configuration.md
panpilot/: config.py
panpilot/admin/: router.py
panpilot/db/: connection.py  schema.sql
panpilot/execution/: audit.py  proactivanet.py  router.py
panpilot/intake/: catchup.py  event_store.py  reference_data.py  router.py  scheduler.py  webhook.py
panpilot/intelligence/: caps.py  engine.py  models.py  prompts.py  rag.py  state_machine.py
panpilot/worker/: dlq.py  exceptions.py  runner.py
scripts/: index_pandocs.py  rag_smoke_test.py
tests/: conftest.py  test_admin.py  test_audit.py  test_caps.py  test_catchup.py  test_connection.py  test_dlq.py  test_engine.py  test_event_store.py  test_proactivanet.py  test_rag.py  test_reference_data.py  test_router.py  test_runner.py  test_scheduler.py  test_state_machine.py  test_webhook.py
